# gatepath

./: .dockerignore  .gitignore  CLAUDE.md  README.md
.agent_native/: agent_roadmap.md
.github/: dependabot.yml
.github/workflows/: android-e2e.yml  android.yml  dbus-contract-parity.yml  desktop-e2e.yml  desktop-hwsim.yml  desktop.yml  release.yml  schema-parity.yml  supply-chain.yml
.reports/: codemap-diff.txt
android/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  run-jvm-tests.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/cc/grepon/gatepath/: BindWatchdog.kt  CaptivePortalActivity.kt  (+3 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
android/fastlane/metadata/android/en-US/: short_description.txt
android/gradle/: libs.versions.toml
desktop/: README.md  cc.grepon.Gatepath.desktop  cc.grepon.Gatepath.metainfo.xml  cc.grepon.Gatepath.yml  com.ventouxlabs.Gatepath.desktop  com.ventouxlabs.Gatepath.metainfo.xml  com.ventouxlabs.Gatepath.yml  pyproject.toml
desktop/gatepath/: __init__.py  __main__.py  app.py  audit_log.py  blocked_domains.py  desktop_isolation.py  diag_context.py  diagnosis_runner.py  http_fetcher.py  netns_client.py  no_follow_redirect.py  portal_launcher.py  portal_monitor.py  portal_probe.py  portal_session.py  portal_webview.py  portal_webview_runner.py  session_controller.py  session_timer.py  vpn_detector.py  window.py
desktop/gatepath-netns-helper/: Cargo.toml
desktop/gatepath-netns-helper/data/: cc.grepon.Gatepath.NetNsHelper.conf  cc.grepon.Gatepath.NetNsHelper.policy  cc.grepon.Gatepath.NetNsHelper.service  com.ventouxlabs.Gatepath.NetNsHelper.conf  com.ventouxlabs.Gatepath.NetNsHelper.policy  com.ventouxlabs.Gatepath.NetNsHelper.service  gatepath-helper-audit.logrotate  gatepath-netns-helper.service  portal-webview-runner
desktop/gatepath-netns-helper/fuzz/: Cargo.toml  README.md
desktop/gatepath-netns-helper/fuzz/fuzz_targets/: validate_display.rs  validate_interface_name.rs  validate_portal_url.rs  validate_wayland_display.rs  validate_xauthority.rs
desktop/gatepath-netns-helper/packaging/: build-rpm.sh  build-sysext.sh  collect-diagnostics.sh  gatepath-netns-helper.spec  validate-sysext.sh
desktop/gatepath-netns-helper/packaging/tmpfiles.d/: gatepath.conf
desktop/gatepath-netns-helper/src/: audit_log.rs  auth.rs  backstop.rs  caller_uid.rs  connectivity.rs  dbus_contract_test.rs  dbus_service.rs  lib.rs  name_watch.rs  netns.rs  network_manager.rs  policykit.rs  service.rs  spawn.rs  throttle.rs  validation.rs
desktop/gatepath-netns-helper/tests/: dbus_integration.rs
desktop/gatepath/diag/: clock_skew_probe.py  dns_hijack_probe.py  engine.py  http_probe.py  http_proxy_probe.py  https_only_probe.py  no_dns_probe.py  private_dns_probe.py  probe.py  redirect_loop_probe.py  report.py  vpn_probe.py
desktop/gatepath/ui/: __init__.py  diagnosis_panel.py  portal_view.blp  window.blp
desktop/tests/: conftest.py  test_app_imports.py  test_audit_log.py  test_blocked_domains.py  test_captive_interface_lookup.py  test_cause_parity.py  test_dbus_contract.py  test_dbus_isolation_signals.py  test_desktop_isolation.py  test_diag_context.py  test_diag_context_probes.py  test_diag_dns_hijack_probe.py  test_diag_engine.py  test_diag_http_probe.py  test_diag_network_probes.py  test_diag_probe.py  test_diag_report.py  test_diagnosis_panel.py  test_diagnosis_runner.py  test_e2e_mock_nm_parity.py  test_http_fetcher.py  test_netns_client.py  test_nm_dbus_signals.py  test_nm_dbusmock_connectivity.py  test_nm_property_contract.py  test_nm_signal_monitor.py  test_portal_launcher.py  test_portal_probe.py  test_portal_webview_runner.py  test_private_dns_probe.py  test_session.py  test_session_controller.py  test_session_matrix.py  test_session_timer.py  test_vpn_detector.py  test_window_diagnosis.py  test_window_isolation.py  test_window_session_active.py
desktop/tools/: check-vfio-feasibility.sh
distribution/: README.md
distribution/fdroid/: com.ventouxlabs.gatepath.yml
distribution/flathub/: com.ventouxlabs.Gatepath.yml
docs/: ARCHITECTURE.md  AUDIT_LOG_SCHEMA.md  BLOCKERS.md  CONTRIBUTING.md  DESKTOP_NETNS_DEPLOYMENT.md  ISOLATION_BACKENDS.md  RATIONALE.md  RELEASING.md  ROADMAP.md  SECURITY_MODEL.md  TESTING_ANDROID.md  TROUBLESHOOTING.md  audit_log_schema.json  netns_helper_dbus_contract.json
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/superpowers/plans/: 2026-06-29-android-no-leak-sentinel.md  2026-07-18-android-context-probes.md  2026-07-19-android-network-probes.md  2026-07-19-cause-parity-guard.md  2026-07-19-desktop-diag-package.md  2026-07-19-desktop-diagnosis-panel.md
docs/superpowers/specs/: 2026-06-29-android-no-leak-sentinel-design.md  2026-07-18-diagnostics-expansion-design.md
fastlane/metadata/android/en-US/: full_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt
mockportal/: conftest.py  run.sh  server.py  test_server.py
tests/e2e-android/: .gitignore  HARNESS_NOTES.md  README.md  compose.yml  run-e2e.sh
tests/e2e-android/driver/: assertions.py  test_assertions.py
tests/e2e-android/guard/: check_release_manifest.py
tests/e2e-android/mockportal-host/: Dockerfile  entrypoint.sh
tests/e2e-android/scenario/: adb_helper.py  ci-script.sh  run-scenario.py  uiautomator_helper.py
tests/e2e-docker/: README.md  compose.yml  run-e2e.sh
tests/e2e-docker/client/: Dockerfile  dbusmock-nm.conf  dbusmock_nm.py  entrypoint.sh  polkit-test.rules  portal-webview-runner.test  run-scenario.py
tests/e2e-docker/driver/: assertions.py
tests/e2e-docker/gateway/: Dockerfile  dnsmasq.conf  entrypoint.sh  nginx.conf
tests/e2e-hwsim/: README.md  build-helper.sh  drive.py  lib.sh  portal-webview-runner.hwsim  preflight.sh  run.sh
(+108 files in other folders)
