[package]
name = "gatepath-netns-helper"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Privileged helper for Gatepath's desktop network-namespace isolation"
repository = "https://github.com/bearyjd/gatepath"
authors = ["Gatepath Contributors"]

[lib]
name = "gatepath_netns_helper"
path = "src/lib.rs"

[[bin]]
name = "gatepath-netns-helper"
path = "src/bin/gatepath-netns-helper.rs"

[dependencies]
thiserror = "1"
anyhow = "1"
# zbus 5 is the current major; native tokio integration without an extra crate.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Audit log (5b.5): serde for the entry struct, serde_json for one-line-per-entry
# JSONL format, chrono for ISO 8601 timestamps. Production audit log writes to
# /var/lib/gatepath/helper-audit.jsonl per the systemd unit's StateDirectory.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
