[package]
name = "gatepath-netns-helper"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Privileged helper for Gatepath's desktop network-namespace isolation"
repository = "https://github.com/bearyjd/gatepath"
authors = ["Gatepath Contributors"]

[lib]
name = "gatepath_netns_helper"
path = "src/lib.rs"

[[bin]]
name = "gatepath-netns-helper"
path = "src/bin/gatepath-netns-helper.rs"

[dependencies]
thiserror = "1"
anyhow = "1"
# zbus 5 is the current major; native tokio integration without an extra crate.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Audit log (5b.5): serde for the entry struct, serde_json for one-line-per-entry
# JSONL format, chrono for ISO 8601 timestamps. Production audit log writes to
# /var/lib/gatepath/helper-audit.jsonl per the systemd unit's StateDirectory.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# URL parsing for portal-URL validation at the spawn boundary uses the same
# RFC 3986 grammar the rest of the stack assumes. (DESK-003 C4: the portal
# WebView is launched via `systemd-run` as a transient unit, so the helper no
# longer hand-rolls fork/setns/setresuid — the `nix` syscall crate that needed
# was dropped along with all `unsafe` in src/spawn.rs.)
url = "2"
# libc for `O_NOFOLLOW` when opening files in the netns connectivity path
# (src/connectivity.rs); std doesn't surface the raw open flag.
libc = "0.2"

[lints.rust]
# The crate is `unsafe`-free as of DESK-003 C4: the portal spawn moved from a
# hand-rolled post-fork setns/setresuid/execv to a transient `systemd-run`
# unit, removing the last `unsafe` block. `deny` (not `forbid`) keeps the door
# open for a justified `#[allow(unsafe_code)]` + SAFETY comment if one is ever
# genuinely needed, while flagging any unannotated reintroduction.
unsafe_code = "deny"

[lints.clippy]
all = "warn"
